laravel/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
  namespace: youtubegaminglive
spec:
  selector:
    app: laravel
  type: ClusterIP
  ports:
  - name: laravel
    protocol: TCP
    port: 9000
    targetPort: 9000
