laravel/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
  namespace: youtubegaminglive
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - youtubegaming.live
    secretName: youtubegaming-tls
  rules:
    - host: youtubegaming.live
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: laravel
                port:
                  number: 80
